Remove console.logs, attempt refactor in new alt.js file

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -33,6 +33,7 @@
       }
       .Starlight {
         background-image: url('star.png');
+        background-repeat: no-repeat;
         background-size: contain;
       }
       .Moonlight {
@@ -52,7 +53,8 @@
     </style>
   </head>
   <body>
-    <h1>First Mini-app here we go!</h1>
+    <!-- <h1>First Mini-app here we go!</h1> -->
+    <h1>Let's play Tic Tac Toe!</h1>
     <button id="btn">Start Over</button>
     <h2 id="player"></h2>
     <table>
